[package]
name = "f64ad"
version = "0.0.1"
description = "A library for easily adding automatic differentiation to Rust."
edition = "2021"
keywords = ["math", "autodiff", "ad"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/djrakita/f64ad"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "f64ad_core",
    "f64ad_core_derive",
]

[dependencies]
f64ad_core = {path = "f64ad_core", version = "0.0.1"}
f64ad_core_derive = { path = "f64ad_core_derive", version = "0.0.1" }
nalgebra = "0.31.1"
ndarray = "0.15.6"
rayon = "1.5.3"
once_cell = "1.14.0"
num_cpus = "1.13.1"
bevy_reflect = "0.8.1"