[package]
name = "f64ad"
version = "0.0.2"
description = "Easy to use, efficient, and highly flexible automatic differentiation in Rust."
edition = "2021"
keywords = ["math", "autodiff", "ad"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/djrakita/f64ad"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "f64ad_core",
    "f64ad_core_derive",
]

[dependencies]
f64ad_core = {path = "f64ad_core", version = "0.0.2"}
f64ad_core_derive = { path = "f64ad_core_derive", version = "0.0.2" }
nalgebra = "0.31.1"
# ndarray = "0.15.6"
# rayon = "1.5.3"
# once_cell = "1.14.0"
# num_cpus = "1.13.1"
# bevy_reflect = "0.8.1"
# tinyvec = {version = "1.6.0", features = ['alloc'] }
# num-traits = "0.2.15"

[profile.dev]
opt-level = 3
lto = "thin"

[profile.release]
opt-level = 3
lto = "thin"