[package]
name = "f64ad_core"
version = "0.0.1"
description = "A library for easily adding automatic differentiation to Rust."
edition = "2021"
keywords = ["math", "autodiff", "ad"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/djrakita/f64ad"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
