[package]
name = "f64ad_core"
version = "0.0.1"
description = "A library for easily adding automatic differentiation to Rust."
edition = "2021"
keywords = ["math", "autodiff", "ad"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/djrakita/f64ad"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.1"
num-traits = "0.2.15"
once_cell = "1.14.0"
num_cpus = "1.13.1"
simba = "0.7.2"
approx = "0.5.1"
